package saka1029.util.polynomial;

public interface Primary {

}
